# rust_project

DataBase/databasebysqlite/: Cargo.toml  sqlite.db
DataBase/databasebysqlite/src/: main.rs
DataBase/databaseofmangodb/: Cargo.toml
DataBase/databaseofmangodb/src/: main.rs
actixandrahi/: Cargo.toml
actixandrahi/src/: add.rhai  main.rs
api-request/: Cargo.toml
api-request/src/: main.rs
basicauth/: Cargo.toml
basicauth/src/: main.rs
compressFile/: Cargo.toml  readme.md
compressFile/src/: main.rs
controlflow/src/: main.rs
csvcompress/: Cargo.toml
csvcompress/src/: main.rs
datatypes/src/: main.rs
decompressFile/: Cargo.toml
decompressFile/src/: main.rs
downloadcli/: Cargo.toml
extractlink/: Cargo.toml
extractlink/src/: main.rs
function/src/: main.rs
githubapirequest/: Cargo.toml
githubapirequest/src/: main.rs
gussing_game/: Cargo.toml
gussing_game/src/: main.rs
imagedownloder/: Cargo.toml
imagedownloder/src/: main.rs
passwordvault/: Cargo.toml  passwords.json
passwordvaultsql/: Cargo.toml
pastbin/: Cargo.toml
pastbin/src/: main.rs
variables/src/: main.rs
working-with-json/: Cargo.toml
working-with-json/src/: main.rs
